--- a/Torch_Backpropagation_Tests.ipynb
+++ b/Torch_Backpropagation_Tests.ipynb
@@ -2,16 +2,23 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/HumbertoDiego/3dgs-reformulated/blob/main/Torch_Backpropagation_Tests.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "B_7htBtewwmv"
       },
       "source": [
-        "## Time everything"
+        "#### Time everything"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 286,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,7 +55,7 @@
         }
       ],
       "source": [
-        "!pip install ipython-autotime\n",
+        "!pip install -q ipython-autotime\n",
         "%load_ext autotime"
       ]
     },
@@ -1331,7 +1338,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "torch-splatting",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -1345,7 +1352,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.13"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
