--- a/Torch_Backpropagation_Tests.ipynb
+++ b/Torch_Backpropagation_Tests.ipynb
@@ -777,16 +777,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "$C(\\mathbf{p}) = \\sum_{i=1}^{N} \\left[ c_i \\ G_i(\\mathbf{p})  \\prod_{j=1}^{i-1} (1- G_j(\\mathbf{p})) \\right]$\n",
+        "$\\displaystyle C(\\mathbf{p}) = \\sum_{i=1}^{N} \\left[ c_i \\ G_i(\\mathbf{p})  \\prod_{j=1}^{i-1} (1- G_j(\\mathbf{p})) \\right]$\n",
         "\n",
         "Onde:\n",
-        "- $G_i(\\mathbf{p}) = exp(-0.5 (\\mathbf{p}-\\mathbf{\\mu_i})^T \\Sigma_i^{'-1} (\\mathbf{p}-\\mathbf{\\mu_i}))$;\n",
+        "- $\\displaystyle G_i(\\mathbf{p}) = exp(-0.5 (\\mathbf{p}-\\mathbf{\\mu_i})^T \\Sigma_i^{'-1} (\\mathbf{p}-\\mathbf{\\mu_i}))$;\n",
         "- $c_i \\in \\mathbb{R}$;\n",
         "- $\\mathbf{\\mu_i},\\mathbf{p} \\in \\mathbb{R}^2$;\n",
         "- $\\Sigma_i' \\in \\mathbb{R}^{2\\times 2}$;\n",
         "- $\\mathbf{\\mu_i}$ são parâmetros a ser atualizados pelo gradiente descendente.\n",
         "\n",
-        "$\\nabla(\\mu) = \\frac{\\partial C}{\\partial \\mu} = \\sum_{i=1}^{N} \\left[ c_i \\ \\frac{\\partial G_i}{\\partial \\mu} \\prod_{j=1}^{i-1} (1- \\frac{\\partial G_j}{\\partial \\mu}) \\right] $\n",
+        "$\\displaystyle \\nabla(\\mu) = \\frac{\\partial C}{\\partial \\mu} = \\sum_{i=1}^{N} \\left[ c_i \\ \\frac{\\partial G_i}{\\partial \\mu} \\prod_{j=1}^{i-1} (1- G_j)  + c_i G_i \\sum_{k=1}^{i-1} \\left(\\prod_{j=1}^{k-1}  (1- G_j)\\right) \\left(-\\frac{\\partial G_k}{\\partial \\mu}\\right) \\left(\\prod_{j=k+1}^{i-1}  (1- G_j)\\right) \\right]$\n",
         "\n",
         "Para $N=3, \\mathbf{p}=[2,3],\\ c_i=1/(i+1),\\ \\mathbf{\\mu_i}=[1+i,1+i] \\ $ e $\\Sigma_i^{'-1} = I \\rightarrow$\n",
         "\n",
@@ -979,7 +979,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "$C(\\mathbf{p}) = \\sum_{i=1}^{N} \\left[ c_i \\ G_i(\\mathbf{p})  \\prod_{j=1}^{i-1} (1- G_j(\\mathbf{p})) \\right]$\n",
+        "$\\displaystyle C(\\mathbf{p}) = \\sum_{i=1}^{N} \\left[ c_i \\ G_i(\\mathbf{p})  \\prod_{j=1}^{i-1} (1- G_j(\\mathbf{p})) \\right]$\n",
         "\n",
         "Onde:\n",
         "- $G_i(\\mathbf{p}) = exp(-0.5 (\\mathbf{p}-\\mathbf{\\mu_i})^T \\Sigma_i^{'-1} (\\mathbf{p}-\\mathbf{\\mu_i}))$;\n",
@@ -989,9 +989,9 @@
         "- $c_i \\in \\mathbb{R}$, $\\mathbf{\\mu_i},\\mathbf{p} \\in \\mathbb{R}^2$ e $\\mathbf{s_i} \\in \\mathbb{R}^3$;\n",
         "- $\\mathbf{\\mu_i}$ e $\\mathbf{s_i}$ serão atualizados pelo gradiente descendente.\n",
         "\n",
-        "$\\nabla(\\mu) = \\frac{\\partial C}{\\partial \\mu} = \\sum_{i=1}^{N} \\left[ c_i \\ \\frac{\\partial G_i}{\\partial \\mu} \\prod_{j=1}^{i-1} (1- \\frac{\\partial G_j}{\\partial \\mu}) \\right] $\n",
+        "$\\displaystyle \\nabla(\\mu) = \\frac{\\partial C}{\\partial \\mu} = \\sum_{i=1}^{N} \\left[ c_i \\ \\frac{\\partial G_i}{\\partial \\mu} \\prod_{j=1}^{i-1} (1- G_j)  + c_i G_i \\sum_{k=1}^{i-1} \\left(\\prod_{j=1}^{k-1}  (1- G_j)\\right) \\left(-\\frac{\\partial G_k}{\\partial \\mu}\\right) \\left(\\prod_{j=k+1}^{i-1}  (1- G_j)\\right) \\right]$\n",
         "\n",
-        "$\\nabla(\\mathbf{s}) = \\frac{\\partial C}{\\partial \\mathbf{s}} = \\sum_{i=1}^{N} \\left[ c_i \\ exp(-0.5 (\\mathbf{p}-\\mathbf{\\mu_i})^T \\frac{\\partial \\Sigma_i^{'-1}}{\\partial \\mathbf{s}} (\\mathbf{p}-\\mathbf{\\mu_i})) \\prod_{j=1}^{i-1} (1- exp(-0.5 (\\mathbf{p}-\\mathbf{\\mu_j})^T \\frac{\\partial \\Sigma_j^{'-1}}{\\partial \\mathbf{s}} (\\mathbf{p}-\\mathbf{\\mu_j}))) \\right]$\n",
+        "$\\displaystyle \\nabla(\\mathbf{s}) = \\frac{\\partial C}{\\partial \\mathbf{s}} = \\sum_{i=1}^{N} \\left[ c_i \\ \\frac{\\partial G_i}{\\partial \\mathbf{s}} \\prod_{j=1}^{i-1} (1- G_j)  + c_i G_i \\sum_{k=1}^{i-1} \\left(\\prod_{j=1}^{k-1}  (1- G_j)\\right) \\left(-\\frac{\\partial G_k}{\\partial \\mathbf{s}}\\right) \\left(\\prod_{j=k+1}^{i-1}  (1- G_j)\\right) \\right]$\n",
         "\n",
         "Para $N=3, \\mathbf{p}=[2,3],\\ c_i=1/(i+1),\\ \\mathbf{\\mu_i}=[1+i,1+i],\\ \\mathbf{s_i} = [0.5(i+1),0.5(i+1),0.5(i+1)]$, $J = diag(1,1,0), W = I, R_i=I \\rightarrow$\n",
         "\n",
@@ -1230,11 +1230,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "$\\mathcal{L} = \\sum_{k=1}^{256}|| C(\\mathbf{p_k}) - \\hat{C}(\\mathbf{p_k}) ||^2$\n",
+        "$\\displaystyle \\mathcal{L} = \\sum_{k=1}^{256}|| C(\\mathbf{p_k}) - \\hat{C}(\\mathbf{p_k}) ||^2$\n",
         "\n",
         "Onde:\n",
         "- $\\hat{C}(\\mathbf{p_k})$ são observações;\n",
-        "- $C(\\mathbf{p_k}) = \\sum_{i=1}^{N} \\left[ c_i \\ G_i(\\mathbf{p_k})  \\prod_{j=1}^{i-1} (1- G_j(\\mathbf{p_k})) \\right]$;\n",
+        "- $\\displaystyle C(\\mathbf{p_k}) = \\sum_{i=1}^{N} \\left[ c_i \\ G_i(\\mathbf{p_k})  \\prod_{j=1}^{i-1} (1- G_j(\\mathbf{p_k})) \\right]$;\n",
         "\n",
         "- $G_i(\\mathbf{p_k}) = exp(-0.5 (\\mathbf{p_k}-\\mathbf{\\mu}^{2D}_i)^T \\Sigma_i^{'-1} (\\mathbf{p_k}-\\mathbf{\\mu}^{2D}_i))$;\n",
         "- $\\mu^{2D}_{i} = \\begin{bmatrix}\\frac{μ^{3D}_{ix} {P}_{0,0} + μ^{3D}_{iy} {P}_{0,1} + μ^{3D}_{iz} {P}_{0,2} + {P}_{0,3}}{μ^{3D}_{ix} {P}_{2,0} + μ^{3D}_{iy} {P}_{2,1} + μ^{3D}_{iz} {P}_{2,2} + {P}_{2,3}}\\\\\\frac{μ^{3D}_{ix} {P}_{1,0} + μ^{3D}_{iy} {P}_{1,1} + μ^{3D}_{iz} {P}_{1,2} + {P}_{1,3}}{μ^{3D}_{ix} {P}_{2,0} + μ^{3D}_{iy} {P}_{2,1} + μ^{3D}_{iz} {P}_{2,2} + {P}_{2,3}}\\end{bmatrix}$\n",
@@ -1244,9 +1244,9 @@
         "- $c_i, P_{m,n} \\in \\mathbb{R}$, $\\mathbf{\\mu}^{2D}_i,\\mathbf{p_k} \\in \\mathbb{R}^2$ e $\\mathbf{\\mu}^{3D}_i, \\mathbf{s}_{i} \\in \\mathbb{R}^3$;\n",
         "- $\\mathbf{\\mu}^{3D}_{i}$ e $\\mathbf{s}_{i}$ serão atualizados pelo gradiente descendente.\n",
         "\n",
-        "$\\nabla(\\mu^{3D}) = \\frac{\\partial \\mathcal{L}}{\\partial \\mu^{3D}} = \\sum_{k=1}^{256} 2 \\cdot || C(\\mathbf{p_k}) - \\hat{C}(\\mathbf{p_k}) || \\cdot || \\frac{\\partial C}{\\partial \\mu^{3D}}(\\mathbf{p_k})|| $\n",
+        "$\\displaystyle \\nabla(\\mu^{3D}) = \\frac{\\partial \\mathcal{L}}{\\partial \\mu^{3D}} = \\sum_{k=1}^{256} 2 \\cdot || C - \\hat{C} || \\cdot || \\frac{\\partial C}{\\partial \\mu^{3D}}|| $\n",
         "\n",
-        "$\\nabla(\\mathbf{s}) = \\frac{\\partial \\mathcal{L}}{\\partial \\mathbf{s}} = \\sum_{k=1}^{256} 2 \\cdot || C(\\mathbf{p_k}) - \\hat{C}(\\mathbf{p_k}) || \\cdot || \\frac{\\partial C}{\\partial \\mathbf{s}}(\\mathbf{p_k})||$\n",
+        "$\\displaystyle \\nabla(\\mathbf{s}) = \\frac{\\partial \\mathcal{L}}{\\partial \\mathbf{s}} = \\sum_{k=1}^{256} 2 \\cdot || C - \\hat{C} || \\cdot || \\frac{\\partial C}{\\partial \\mathbf{s}}||$\n",
         "\n",
         "Para $N=3, \\mathbf{p}=[2,3],\\ c_i=1/(i+1),\\ \\mathbf{\\mu_i}=[1+i,1+i],\\ \\mathbf{s_i} = [0.5(i+1),0.5(i+1),0.5(i+1)]$, $J = diag(1,1,0), W = I, R_i=I \\rightarrow$\n",
         "\n",
@@ -1257,67 +1257,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 36,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "S:\n"
-          ]
-        },
-        {
-          "data": {
-            "text/latex": [
-              "$\\displaystyle \\sum_{i=1}^{256} \\left({I}_{i} + 2\\right)^{2}$"
-            ],
-            "text/plain": [
-              "Sum((I[i] + 2)**2, (i, 1, 256))"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Derivative of S w.r.t i:\n"
-          ]
-        },
-        {
-          "data": {
-            "text/latex": [
-              "$\\displaystyle \\sum_{i=1}^{256} 2 \\left({I}_{i} + 2\\right) \\delta_{0 i}$"
-            ],
-            "text/plain": [
-              "Sum(2*(I[i] + 2)*KroneckerDelta(0, i), (i, 1, 256))"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "time: 0 ns (started: 2025-06-11 11:48:00 -03:00)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import sympy as sp\n",
-        "N = 256\n",
-        "i= sp.symbols('i')\n",
-        "I = sp.IndexedBase('I')\n",
-        "S = sp.Sum((I[i]+2)**2, (i, 1, N))\n",
-        "dS_di = sp.diff(S, I[0])\n",
-        "print(\"S:\")\n",
-        "\n",
-        "display(S)\n",
-        "print(\"Derivative of S w.r.t i:\")\n",
-        "display(dS_di)"
+        "N = 256\n"
       ]
     },
     {
